# kaggle-house-prices

./: .gitignore  README.md  pyproject.toml  test_predictor.ipynb
kaggle_house_prices/: data.py
scripts/: get_data.sh  submit_submission.sh
