[tool.poetry]
name = "kaggle-house-prices"
version = "0.1.0"
description = ""
authors = ["mcmhav <mcmhav@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.0"
pandas = "^0.24.2"
kaggle = "^1.5"
numpy = "^1.16"
tensorflow = "2.0.0-alpha0"

[tool.poetry.dev-dependencies]
pydocstyle = "^3.0"
pytest = "^4.4"
pylint = "^2.3"
autopep8 = "^1.4"
jupyter = "^1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
